@@ -1,1 +1,0 @@
-#define NEVC 0
